# festa_rs

./: .gitignore  Cargo.toml  README.md
precompute/: gen_fp.sage  precompute.sage  precompute.sage.py  temp.py
src/: discrete_log.rs  eccore.rs  festa.rs  fields.rs  isogeny.rs  lib.rs  main.rs  pairing.rs  supersingular.rs  theta.rs
src/finitefield/: fp2_gen.rs  fp_gen.rs
