[package]
name = "festa_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = { version = "0.4.4", features = ["rand"] }
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_core = "0.6.4"
sha2 = "0.10.8"
sha3 = "0.10.8"
